2011-06-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-83
	* fix bug #83034
	* do not propagate parent's os.environ for PYTHONINSPECT and
	  ATHENA_PROC_NUMBER env.vars to AthFileServer process
	* M python/AthFile/impl.py

2011-05-31  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-82
	* remove spurious printouts when using 'pkgco -r pkg'
	* M bin/pkgco.py

2011-05-27  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-81
	* adding a new tc command: show-clients to get the list of clients
	  for a given cmt package (and check them out)
	* A python/scripts/tc_show_clients.py
	* M python/AmiLib.py
	* M python/scripts/__init__.py

2011-05-25  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-79
	* obo Vahko: support for merging HITS files
	* M python/PoolFile.py

2011-05-24  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-78
	* improve resilience of diff-root-files in the face of
	  out-of-synch iterators over leaves
	* M python/scripts/diff_root_files.py

	* tagging PyUtils-00-10-77
	* fix bug 82176: gzip the athfile-cache files
	* python/AthFile/impl.py

	* tagging PyUtils-00-10-76
	* fix bug 82547: proper quoting of avn command arguments:
	  avn ci -m "It's an abbreviation. an escaped double-quote: \""
	  avn ci -m 'Here is an unescaped double-quote: "'
	* harmonize --range into --entries
	* M bin/avn.py
	* M python/scripts/dump_root_file.py

2011-05-23  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-75
	* add a --range option to dump-root-file to dump parts of a file
	* M python/scripts/dump_root_file.py

2011-05-20  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-74
	* obo V.Tsulaia: fixup for AthenaMP
	* M python/AthFile/impl.py

2011-05-18  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-73
	* support for Gaudi packages
	* fixed regression introduced by refactoring w/ -72
	* M bin/pkgco.py
